<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>local.socialnetwork</groupId>
        <artifactId>socialnetwork</artifactId>
        <version>1.0</version>
    </parent>

    <groupId>local.socialnetwork.profileservice</groupId>
    <artifactId>socialnetwork-profile-service</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>

    <properties>
        <java.version>14</java.version>
        <spring.boot.version>2.3.3.RELEASE</spring.boot.version>
        <spring.boot.web.version>2.3.3.RELEASE</spring.boot.web.version>
        <spring.boot.data.jpa.version>2.3.3.RELEASE</spring.boot.data.jpa.version>
        <spring.cloud.config.starter.version>2.2.5.RELEASE</spring.cloud.config.starter.version>
        <maven.compiler.source>14</maven.compiler.source>
        <maven.compiler.target>14</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
            <version>${spring.boot.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>${spring.boot.web.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
            <version>${spring.boot.data.jpa.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-config</artifactId>
            <version>${spring.cloud.config.starter.version}</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>2.3.5.RELEASE</version>
                <configuration>
                    <mainClass>local.socialnetwork.profileservice.SpringBootRunProfileService</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>